--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -63,6 +63,8 @@ In the traditional scenario, participants interacted with the VR chapel using th
 
 In the PR scenario, participants had access to a single transition style, the transition with linear interpolation (section \ref{transition-with-linear-interpolation}), triggered by pressing \& holding the \texttt{A} button on the Xbox controller. As mentioned in section \ref{initial-testing}, this transition emerged as the `favourite' during initial tests within the OVW group. As such, it was chosen as the only transition style for the PR scenario in this first stage of evaluation wherein the focus of the investigation was upon comparing the PR scenario to the traditional scenario experience \& not upon gleaning details of the merits \& drawbacks exhibited by different PR implementations. The default view on the DK1's screen was 100\% RW with the transition causing a change to 100\% VR, a situation visualised upon the combined model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}.
 
+Before taking part in the two scenarios, participants were given the opportunity to familiarise themselves with the DK1 by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo was developed by Oculus themselves \& is distributed with the Rift Unity integration package. It represented at the time a very polished \& stable DK1 experience, ideal for introducing inexperienced users to HMD based VR. It was thus used to give participants an opportunity to acclimatize to the Rift, in order to reduce skewing their subsequent experiences with the St Salvator's chapel model due to drastically different levels of familiarity with the DK1 between the two scenarios.
+
 %=========================================================================================================
 
 \subsection{Evaluation Techniques}
@@ -127,25 +129,25 @@ The comparison of the traditional scenario against the PR scenario included coll
 
 %=========================================================================================================
 
-\subsection{Process}
+%\subsection{Process}
 
-The stage 1 investigations took place as follows;
+%The stage 1 investigations took place as follows;
 
-\begin{enumerate}
-	\item Participants completed the pre-task questionnaire.
+%\begin{enumerate}
+%	\item Participants completed the pre-task questionnaire.
 	
-	\item Participants were given the opportunity to familiarise themselves with the DK1 by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo was developed by Oculus themselves \& is distributed with the Rift Unity integration package. It represented at the time a very polished \& stable DK1 experience, ideal for introducing inexperienced users to HMD based VR. It was thus used to give participants an opportunity to acclimatize to the Rift, in order to reduce skewing their subsequent experiences with the St Salvator's chapel model due to drastically different levels of familiarity with the DK1 between the two scenarios.
+%	\item Participants were given the opportunity to familiarise themselves with the DK1 by spending a few minutes interacting with Oculus' `Tuscany' demo\footnote{\url{https://share.oculus.com/app/oculus-tuscany-demo}}. This demo was developed by Oculus themselves \& is distributed with the Rift Unity integration package. It represented at the time a very polished \& stable DK1 experience, ideal for introducing inexperienced users to HMD based VR. It was thus used to give participants an opportunity to acclimatize to the Rift, in order to reduce skewing their subsequent experiences with the St Salvator's chapel model due to drastically different levels of familiarity with the DK1 between the two scenarios.
 	
-	\item Participants completed the traditional scenario.
+%	\item Participants completed the traditional scenario.
 	
-	\item Participants completed the SUS questionnaire \& the 12-item Likert-type questionnaire for their experience with the traditional scenario.
+%	\item Participants completed the SUS questionnaire \& the 12-item Likert-type questionnaire for their experience with the traditional scenario.
 	
-	\item Participants completed the PR scenario.
+%	\item Participants completed the PR scenario.
 	
-	\item Participants completed the SUS questionnaire \& the 12-item Likert-type questionnaire for the PR scenario.
+%	\item Participants completed the SUS questionnaire \& the 12-item Likert-type questionnaire for the PR scenario.
 	
-	\item Participants are engaged in a short structured interview.
-\end{enumerate}
+%	\item Participants are engaged in a short structured interview.
+%\end{enumerate}
 
 %=========================================================================================================
 
@@ -193,65 +195,156 @@ Assessing the severity of the issues raised by this first stage of investigation
 
 \section{Stage 1 Results}
 
-A total of 6 participants completed the stage 1 investigation, however due to a mistake only 5 participants completed the 12-item Likert-type questionnaires correctly.
-
-For n = 6
+A total of 6 participants completed the stage 1 investigation;
 \begin{itemize}
-	\item age ranged from 21 to 26, mean age 23.3, sd 1.86
+	\item Age ranged from 21 to 26, with a mean of 23.3 \& a standard deviation of 1.86
 	\item 3x identified as male \& 3x as female
-	\item all reported previous experience with a games console controller
+	\item All reported previous experience with a games console controller
 	\item 1x reported previous experience with a HMD
 	\item 2x reported having previously visited the chapel
-	\item none had previously experienced the virtual chapel
+	\item None had previously experienced the virtual chapel
 \end{itemize}
 
-For n = 5 (excluding the participant who did not complete the 12-item Likert-type questionnaires correctly);
-\begin{itemize}
-	\item age ranged from 21 to 26, mean age 23, sd 1.87
-	\item 3x identified as male \& 2x as female
-	\item all reported previous experience with a games console controller
-	\item none reported previous experience with a HMD
-	\item 1x reported having previously visited the chapel
-	\item none had previously experienced the virtual chapel
-\end{itemize}
+%=========================================================================================================
 
-As expected, the PR scenario scored lower on SUS than the traditional scenario (see figure \ref{sus.png}). Comparing the SUS results
+\subsection{SUS}
+As expected, the PR scenario scored lower on SUS than the traditional scenario (see figure \ref{sus.png}).
 
 \TwoFig{1/sus.png}{SUS results.}{sus.png}
        {1/post_task_questionnaire_boxplot.png}{12-item questionnaire results.}{post_task_questionnaire_boxplot.png}
 
+%=========================================================================================================
 
+\subsection{Likert-type Questionnaires}
 
+One participant did not complete the Likert-type questionnaires. This was the only participant to report previous experience with a HMD.
 
+When considering the responses to the questionnaires (see figure \ref{post_task_questionnaire_boxplot.png}), remembering that the participant who reported previous HMD experience is not represented, several observations can be made.
 
+\begin{itemize}
+	\item Participants enjoyed the PR scenario more than the traditional scenario (q1)
+	\item Participants found it easier to compare features from past \& present in the PR scenario (q2)
+	\item Perceived motion sickness/dizziness was not noticeably different between the two scenarios (q3)
+	\item There was a greater ‘sense of presence’ in the VR environment in the PR scenario (q4)
+	\item There was a greater awareness of both environments in the PR scenario (q5)
+	\item Participants found the PR scenario a more rewarding way to explore the chapel (q6)
+	\item Participants had a greater sense of being in the past in the PR scenario (q7)
+	\item Both scenarios scored fairly low for participants thinking they would have preferred a conventional monitor (q8)
+	\item The PR scenario further changed participants’ understanding of the chapel than the traditional scenario (q9)
+	\item Both scenarios scored equally low for participants’ thinking they did not notice differences between RW \& VR (q10)
+	\item The visual quality of the headset was perceived as being worse in the mobile scenario (q11). Whilst the visual quality of the VR visuals was identical in both scenarios, this result is presumably because during the PR scenario the participants were viewing the RW environment upon the DK1's screen via the cameras, with much lower visual acuity than in the traditional scenario where they observed the RW environment unmediated.
+	\item Participants felt that they better understood what the chapel was like in the past after the PR scenario, compared to the traditional scenario (q12)
+\end{itemize}
 
-
-
-
+It is worth highlighting that although the PR scenario scored lower in SUS than the traditional scenario, both scenarios scored highly in question 2 \& lowly in question 8 of the Likert-type questionnaires.
 
 %=========================================================================================================
 
-\subsection{Pre-task Questionnaire}
+\subsection{Interview Transcripts}
 
-For n=5 ages ranged from 21-26, 3x female \& 2x male, all reported previous experience using a games console controller, 1x reported previous use of a HMD, 2x reported having previously visited the chapel, none had previously interacted with the virtual chapel model.
+Studying the structured interviews that took place after participants had completed both scenarios (interviews were recorded \& later transcribed) provided a wealth of qualitative feedback about the stage 1 investigation.
 
-\subsection{SUS}
+All participants said that the PR scenario was (much) more engaging than the traditional scenario, even though 2x participants said that they preferred the seated scenario. Of those that said they preferred the traditional scenario, one did not find it comfortable to walk with the headset \& the other said that they got a better understanding of the past when sat down wearing the DK1. The participant who found it uncomfortable to walk with the headset was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed \& was not changed to account for different participant heights (as this would have required a lengthy calibration phase for each \& every participant). Thus for a participant of average height, the discrepancy between their RW viewpoint \& their VR viewpoint was minimal, however for a particularly short or tall participant this discrepancy would have been much worse \& may have contributed to the discomfort of walking with the DK1 as each transition between RW \& VR would have resulted in a perceptible shift in height. Those that said that the preferred the PR scenario alluded to the immediacy of comparison between RW \& VR afforded by it as a contributing factor.
+
+Twice as many participants reported that the PR scenario made it easier to spot differences between RW \& VR as reported that the traditional scenario made it easier. The quality of the cameras was mentioned as a possible detractor by one of the participants who answered that the traditional scenario made it easier, while again the immediacy of comparison possible between RW \& VR was alluded to in support of the PR scenario for spotting differences, with one participant directly mentioning then confirming this immediacy as the enabler of spotting more differences. One participant mentioned that with the traditional scenario it was not clear that you were \textit{``trying to look into the past''} but in the PR scenario it was obvious because \textit{``you can see the differences''}, while another participant directly said that s/he preferred the PR scenario because \textit{``it was easier to compare \& contrast between the real world \& the virtual one''}.
+
+4 out of 6 participants reported noticing differences between RW \& VR in the PR scenario that they did not notice in the traditional scenario. In particular, the different position of the rood screen was mentioned by several participants \& one participant was able to list multiple differences that s/he had spotted in the PR scenario that they had not noticed in the traditional scenario.
+
+The one participant to report experiencing motion sickness elaborated that it was worse when using the DK1 in the traditional scenario than when walking with the DK1 in the PR scenario, because \textit{``sitting down \& moving around feels weird} (a reference to moving throughout the VR environment using the Xbox controller whilst physically stationary sitting on a chair). This observation alludes to the idea of physical embodiment/movement improving a VR experience, by representing the opposite position of restricted movement \& lack of matching embodiment worsening the VR experience.
+
+The accuracy \& lag of the indoor positioning was cited by one participant as needing work, because it \textit{``caught me off guard twice''}. Furthermore, the quality of the RW visuals when perceived through the DK1 \& cameras was mentioned by several participants as needing improvement, with one specifically mentioning that a higher \textit{``resolution''} was needed.
+
+%=========================================================================================================
+
+\subsection{Log Data}
+
+Log data is missing for participant 2.
 
 
-As expected, the SUS scores for the mobile scenario are lower than those of the stationary scenario, although not drastically so. Furthermore, although scoring lower on SUS, the mobile scenario came out above the stationary scenario when looking at the results of q8 in the 12-item questionnaire which asked participants if they thought they would have preferred a conventional computer monitor.
-
-\subsection{12-item Questionnaire}
+With all participants there was substantially more yaw change than pitch change, in both stationary \& mobile scenarios
 
 
-The hypotheses seem to hold, in particular;
 
-\begin{itemize}
-	\item \textit{Participants will maintain greater awareness of both real \& virtual environments in the mobile scenario than in the stationary scenario} is supported by the responses to q5
-	\item \textit{Participants will have a greater sense of `being in the past' in the mobile scenario than in the stationary scenario} is supported by q7 (thanks to embodiment?)
-	\item \textit{Participants will gain a better understanding of what the chapel was like in the past in the mobile scenario than in the stationary scenario} is supported by q12
-\end{itemize}
+\begin{table}
+\begin{center}
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
 
-It is worth highlighting the responses to q10 in relation to those to q2. Participants reported finding it easier to compare features from the past \& present (q2) during the mobile scenario, however did not report a difference between not noticing differences between the real \& virtual environments (q10).
+Participant & RW (\textdegree) & VR (\textdegree) \\
+
+\hline
+
+1 & 25.54516 & 39.88677 \\
+
+\hline
+
+3 & 11.70205 & 60.63576 \\
+
+\hline
+
+4 & 18.03172 & 15.29998 \\
+
+\hline
+
+5 & 23.15504 & 29.27426 \\
+
+\hline
+
+6 & 41.71669 & 47.44 \\
+
+\hline
+\end{tabular}
+\caption{weighted mean sd in yaw}
+\label{sdyawtab}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+Participant & RW (\textdegree) & VR (\textdegree) \\
+
+\hline
+
+1 & 13.32535 & 17.55376 \\
+
+\hline
+
+3 & 12.19373 & 24.66156 \\
+
+\hline
+
+4 & 6.132957 & 6.132957 \\
+
+\hline
+
+5 & 12.19289 & 12.79656 \\
+
+\hline
+
+6 & 15.71078 & 15.34919 \\
+
+\hline
+\end{tabular}
+\caption{weighted mean sd in pitch}
+\label{sdpitchtab}
+\end{center}
+\end{minipage}
+\end{center}
+\end{table}
+
+
+
+
+
+
+
+
+
 
 %=========================================================================================================
 
