MShades stage 1 stats, new plots

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -133,22 +133,26 @@ This final iteration of the Venn diagram still contains ambiguity, however it is
 \begin{longtable}{| l | p{10cm} |}
 
 \hline	
-	
+
+\textbf{Term} & \textbf{Definition} \\
+
+\hline
+
 %=========================================================================================================
 		
-\textbf{Reality} & An environment that is entirely unmodelled, with the viewport containing no virtual objects and with no computer-based quantitative information associated with any of the (necessarily real) objects. \\
+Reality & An environment that is entirely unmodelled, with the viewport containing no virtual objects and with no computer-based quantitative information associated with any of the (necessarily real) objects. \\
 		
 \hline
 		
 %=========================================================================================================
 
-\textbf{Alternate Reality} & Any environment in which the environmental stimuli received by a subject have been somehow mediated or modulated. That is, alternate reality is a term that encompasses everything that isn't purely `reality'. \\
+Alternate Reality & Any environment in which the environmental stimuli received by a subject have been somehow mediated or modulated. That is, alternate reality is a term that encompasses everything that isn't purely `reality'. \\
 
 \hline
 		
 %=========================================================================================================
 		
-\textbf{Virtual Reality (VR)} & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1994, Milgram1999, Want2009}.
+Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1994, Milgram1999, Want2009}.
 
 While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using Head Mounted Displays \& body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
 		
@@ -156,20 +160,20 @@ While traditional definitions of virtual reality require the environment to be c
 		
 %=========================================================================================================
 
-\textbf{Distributed Virtual Reality (DVR)} & Multi-user VR where telecommunications are employed to allow multiple (geographically distributed) users to occupy the same VR environment, allowing cooperation~\cite{Terashima2001}. \\
+Distributed Virtual Reality (DVR) & Multi-user VR where telecommunications are employed to allow multiple (geographically distributed) users to occupy the same VR environment, allowing cooperation~\cite{Terashima2001}. \\
 
 \hline
 		
 %=========================================================================================================
 
 
-\textbf{Mixed Reality (MR)} & The broad range of environments that arise from the merging of real and virtual environments to some extent, such that the result is neither entirely real nor entirely virtual, with real and virtual objects co-existing. Both augmented reality and augmented virtuality are included under the broader classification of mixed reality. \\
+Mixed Reality (MR) & The broad range of environments that arise from the merging of real and virtual environments to some extent, such that the result is neither entirely real nor entirely virtual, with real and virtual objects co-existing. Both augmented reality and augmented virtuality are included under the broader classification of mixed reality. \\
 
 \hline
 		
 %=========================================================================================================
 
-\textbf{Augmented Reality (AR)} & A mixed reality environment comprising a real environment that has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \\
+Augmented Reality (AR) & A mixed reality environment comprising a real environment that has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \\
 
 	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
 
@@ -179,7 +183,7 @@ While traditional definitions of virtual reality require the environment to be c
 
 %=========================================================================================================
 
-\textbf{Augmented Virtuality (AV)} & A virtual environment upon which sampled real objects are overlain, perhaps through the use of cameras~\cite{caballero:behand}. \\
+Augmented Virtuality (AV) & A virtual environment upon which sampled real objects are overlain, perhaps through the use of cameras~\cite{caballero:behand}. \\
 
 %A simple commercial example of augmented virtuality is the EyeToy accessory and associated software for Sony's Playstation 2 games console (and later the Playstation Eye for the Playstation 3), a digital camera that captures images of players and their surroundings and integrates them into the gaming experience presented on the screen.
 
@@ -187,13 +191,13 @@ While traditional definitions of virtual reality require the environment to be c
 
 %=========================================================================================================
 
-\textbf{Mediated Reality} & \textit{``A general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Encompasses all of mixed reality \& modulated reality. \\
+Mediated Reality & \textit{``A general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Encompasses all of mixed reality \& modulated reality. \\
 
 \hline
 
 %=========================================================================================================
 
-\textbf{Modulated Reality} & Platforms that aim to modify the user's view, by multiplicative, diminishing, rotational, etc. techniques, where the user's view can be wholly real, or a mix of real \& virtual content. \\
+Modulated Reality & Platforms that aim to modify the user's view, by multiplicative, diminishing, rotational, etc. techniques, where the user's view can be wholly real, or a mix of real \& virtual content. \\
 
 \hline
 
@@ -476,35 +480,39 @@ In this scenario there is no spatial equivalence between the real environment an
 \begin{center}
 \begin{longtable}{| l | p{10cm} |}
 
-\hline	
-	
-%=========================================================================================================
-		
-\textbf{HyperReality (HR)} & A hypothetical high level term referring to a category of mixed realities that combine VR content with views of the real world in a seamless manner such that the observer experiences \textit{hyperreality}. \\
-		
 \hline
-		
-%=========================================================================================================
 
-\textbf{hyperreality} & A postmodern term describing a situation wherein an observer is unable to distinguish between reality \& a simulation of reality. \\
+\textbf{Term} & \textbf{Definition} \\
 
 \hline
 
 %=========================================================================================================
 		
-\textbf{PolySocial Reality (PoSR)} & Describes multiple simultaneous social interactions mediated via various CMC technologies.~\cite{Applin2012}. \\
+HyperReality (HR) & A hypothetical high level term referring to a category of mixed realities that combine VR content with views of the real world in a seamless manner such that the observer experiences \textit{hyperreality}. \\
+		
+\hline
+		
+%=========================================================================================================
+
+hyperreality & A postmodern term describing a situation wherein an observer is unable to distinguish between reality \& a simulation of reality. \\
+
+\hline
+
+%=========================================================================================================
+		
+PolySocial Reality (PoSR) & Describes multiple simultaneous social interactions mediated via various CMC technologies.~\cite{Applin2012}. \\
 
 \hline
 
 %=========================================================================================================
 
-\textbf{Cross Reality (XR)} & Systems that feature two environments, one real \& one virtual, both complete unto themselves~\cite{lifton:merging} but enriched by their ability to mutually reflect, influence \& merge into one another thanks to bidirectional information flow between them~\cite{kim:practical}. \\
+Cross Reality (XR) & Systems that feature two environments, one real \& one virtual, both complete unto themselves~\cite{lifton:merging} but enriched by their ability to mutually reflect, influence \& merge into one another thanks to bidirectional information flow between them~\cite{kim:practical}. \\
 
 \hline
 
 %=========================================================================================================
 
-\textbf{Parallel Reality (PR)} & Systems comprising two environments, one real \& the other virtual, each complete unto itself, wherein the user is granted the ability to transition between receiving stimuli from either. \\
+Parallel Reality (PR) & Systems comprising two environments, one real \& the other virtual, each complete unto itself, wherein the user is granted the ability to transition between receiving stimuli from either. \\
 
 \hline
 
