--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -587,8 +587,12 @@ Brief documentation of the functions in \path{/indra/newview/LLViewerSerialMovem
 \begin{center}
 \begin{longtable}{| p{4.2cm} | p{10cm} |}
 
-\hline	
-	
+\hline
+
+\textbf{Function} & \textbf{Description} \\
+
+\hline
+
 %=========================================================================================================
 		
 \texttt{::connect} & Safely connects to a serial device (if not already connected). \\
