--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -133,7 +133,7 @@ The PS3 Eye has a `1/4'' type' sensor which is only an indication of its true di
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
 \hline
-Focal length (mm) & Diagonal FOV (\textdegree) & Horizontal FOV (\textdegree) & Vertical FOV (\textdegree) \\
+\textbf{Focal length (mm)} & \textbf{Diagonal FOV (\textdegree)} & \textbf{Horizontal FOV (\textdegree)} & \textbf{Vertical FOV (\textdegree)} \\
 \hline
 2.5mm & 84    & 71.5 & 56.7 \\
 2.1mm & 93.9  & 81.2 & 65.5 \\
@@ -143,7 +143,7 @@ Focal length (mm) & Diagonal FOV (\textdegree) & Horizontal FOV (\textdegree) & 
 1.7mm & 105.9 & 93.3 & 76.9 \\
 \hline
 \end{tabular}
-\caption{FOV of various focal lengths resolving onto a 1/4'' type sensor.}
+\caption{FOV of various focal length lenses resolving onto a 1/4'' type sensor.}
 \label{fov-table}
 \end{center}
 \end{table}
