--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -76,6 +76,10 @@ The comparison of the traditional scenario against the PR scenario included coll
 
 \hline
 
+\textbf{Field} & \textbf{Description} \\
+
+\hline
+
 \texttt{<frame number>} & Incremented with each frame pushed to the DK1, starting at 0 when the Unity application is fun. \\
 
 \hline
@@ -244,7 +248,7 @@ It is worth highlighting that although the PR scenario scored lower in SUS than 
 
 Studying the structured interviews that took place after participants had completed both scenarios (interviews were recorded \& later transcribed) provided a wealth of qualitative feedback about the stage 1 investigation.
 
-All participants said that the PR scenario was (much) more engaging than the traditional scenario, even though 2x participants said that they preferred the seated scenario. Of those that said they preferred the traditional scenario, one did not find it comfortable to walk with the headset \& the other said that they got a better understanding of the past when sat down wearing the DK1. The participant who found it uncomfortable to walk with the headset was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed \& was not changed to account for different participant heights (as this would have required a lengthy calibration phase for each \& every participant). Thus for a participant of average height, the discrepancy between their RW viewpoint \& their VR viewpoint was minimal, however for a particularly short or tall participant this discrepancy would have been much worse \& may have contributed to the discomfort of walking with the DK1 as each transition between RW \& VR would have resulted in a perceptible shift in height. Those that said that the preferred the PR scenario alluded to the immediacy of comparison between RW \& VR afforded by it as a contributing factor.
+All participants said that the PR scenario was (much) more engaging than the traditional scenario, even though 2x participants said that they preferred the seated scenario. Of those that said they preferred the traditional scenario, one did not find it comfortable to walk with the headset \& the other said that they got a better understanding of the past when sat down wearing the DK1. The participant who found it uncomfortable to walk with the headset was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches \& was not changed to account for different participant heights, as this would have required a lengthy calibration phase for each \& every participant). Thus for a participant of average height, the discrepancy between their RW viewpoint \& their VR viewpoint was minimal, however for a particularly short or tall participant this discrepancy would have been much worse \& may have contributed to the discomfort of walking with the DK1 as each transition between RW \& VR would have resulted in a perceptible shift in height. Those that said that the preferred the PR scenario alluded to the immediacy of comparison between RW \& VR afforded by it as a contributing factor.
 
 Twice as many participants reported that the PR scenario made it easier to spot differences between RW \& VR as reported that the traditional scenario made it easier. The quality of the cameras was mentioned as a possible detractor by one of the participants who answered that the traditional scenario made it easier, while again the immediacy of comparison possible between RW \& VR was alluded to in support of the PR scenario for spotting differences, with one participant directly mentioning then confirming this immediacy as the enabler of spotting more differences. One participant mentioned that with the traditional scenario it was not clear that you were \textit{``trying to look into the past''} but in the PR scenario it was obvious because \textit{``you can see the differences''}, while another participant directly said that s/he preferred the PR scenario because \textit{``it was easier to compare \& contrast between the real world \& the virtual one''}.
 
@@ -258,12 +262,70 @@ The accuracy \& lag of the indoor positioning was cited by one participant as ne
 
 \subsection{Log Data}
 
-Log data is missing for participant 2.
+For the traditional scenario log data was recorded while each participant was engaging with the VR chapel, in a seated position \& using the Xbox controller to navigate the VR environment. For the PR scenario log data was recorded throughout the whole scenario, such that data are available for both the periods in which participants were observing the RW chapel via the DK1 \& cameras in addition to the periods in which participants were observing the VR chapel. As such, several comparisons can be made between these data. Within the PR scenario, comparisons can be made between the periods that participants were observing RW \& the periods that participants were observing VR. Between the traditional scenario \& the PR scenario, comparisons can be made between the VR section of the traditional scenario \& the periods that participants were observing VR in the PR scenario. Log data was not captured for participant 2 \& was not captured for the traditional scenario for participant 5.
+
+When comparing data between the RW \& VR periods of the PR scenario, it is immediately noticeable that for some participants there was substantially more head movement in terms of pitch (vertical movement) \& yaw (horizontal movement) while they were perceiving VR stimuli than while they were perceiving RW stimuli. This is particularly evident when plotting these pitch \& yaw data against time with the RW/VR visuals indicated. Figure \ref{1_pitch_yaw.png} shows the pitch \& yaw data for participant 1, who prominently displayed this tendency toward greater head movement while viewing VR than RW. The coloured background of the plot indicates which environment the participant was perceiving; blue for RW \& green for VR
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{1/1_pitch_yaw.png}
+	\caption{Pitch \& yaw against time for participant 1 in PR scenario.}
+	\label{1_pitch_yaw.png}
+	\end{center}
+\end{figure}
+
+As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more prevalent in the data from participant 3, while the data from participant 5 in figure \ref{5_pitch_yaw.png} show the relationship to a lesser extent.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{1/3_pitch_yaw.png}
+	\caption{Pitch \& yaw against time for participant 3 in PR scenario.}
+	\label{3_pitch_yaw.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{1/5_pitch_yaw.png}
+	\caption{Pitch \& yaw against time for participant 5 in PR scenario.}
+	\label{5_pitch_yaw.png}
+	\end{center}
+\end{figure}
 
 
-With all participants there was substantially more yaw change than pitch change, in both stationary \& mobile scenarios
+\textbf{***this relationship is confirmed by statistics}
+
+%=====================
+
+Comparing between RW \& VR periods of PR scenario
+
+For several participants there was notably more head movement when they were perceiving virtual than when they were perceiving real
+
+%=====================
+
+Comparing between VR section of traditional scenario \& VR periods of PR scenario
+
+Smaller difference between yaw \& pitch for VR periods of PR scenario than for VR segment of traditional scenario
+
+Yaw change less in VR periods of PR scenario than in VR segment of traditional scenario
+
+	Overall head movement in PR scenario VR periods lower than in VR segment of traditional scenario
+
+%=====================
+
+General observations
+
+Substantially more yaw change than pitch change, in both traditional VR section \& both RW \& VR PR periods
+
+Mean time spent in each environment for PR scenario varied greatly
+
+%=====================
 
 
+
+
+
+\textbf{Weighted mean standard deviation in pitch \& yaw for RW \& VR periods of PR scenario.}
 
 \begin{table}
 \begin{center}
@@ -272,32 +334,32 @@ With all participants there was substantially more yaw change than pitch change,
 \begin{tabular}{|c|c|c|}
 \hline
 
-Participant & RW (\textdegree) & VR (\textdegree) \\
+\textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
 
 \hline
 
-1 & 25.54516 & 39.88677 \\
+1 & 13.325 & 17.554 \\
 
 \hline
 
-3 & 11.70205 & 60.63576 \\
+3 & 12.194 & 24.662 \\
 
 \hline
 
-4 & 18.03172 & 15.29998 \\
+4 & 6.133 & 6.133 \\
 
 \hline
 
-5 & 23.15504 & 29.27426 \\
+5 & 12.193 & 12.797 \\
 
 \hline
 
-6 & 41.71669 & 47.44 \\
+6 & 15.712 & 15.349 \\
 
 \hline
 \end{tabular}
-\caption{weighted mean sd in yaw}
-\label{sdyawtab}
+\caption{Weighted mean sd in pitch for PR scenario.}
+\label{sdpitchtab}
 \end{center}
 \end{minipage}
 %
@@ -306,32 +368,32 @@ Participant & RW (\textdegree) & VR (\textdegree) \\
 \begin{tabular}{|c|c|c|}
 \hline
 
-Participant & RW (\textdegree) & VR (\textdegree) \\
+\textbf{Participant} & \textbf{RW (\textdegree)} & \textbf{VR (\textdegree)} \\
 
 \hline
 
-1 & 13.32535 & 17.55376 \\
+1 & 25.545 & 39.887 \\
 
 \hline
 
-3 & 12.19373 & 24.66156 \\
+3 & 11.702 & 60.636 \\
 
 \hline
 
-4 & 6.132957 & 6.132957 \\
+4 & 18.032 & 15.300 \\
 
 \hline
 
-5 & 12.19289 & 12.79656 \\
+5 & 23.155 & 29.274 \\
 
 \hline
 
-6 & 15.71078 & 15.34919 \\
+6 & 41.717 & 47.440 \\
 
 \hline
 \end{tabular}
-\caption{weighted mean sd in pitch}
-\label{sdpitchtab}
+\caption{Weighted mean sd in yaw for PR scenario.}
+\label{sdyawtab}
 \end{center}
 \end{minipage}
 \end{center}
